base/default-backend/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-backend
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    hostname: k8s.nhlabs.org
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
        - name: k8s-nhlabs-org
          kind: Secret
          group: ""
  - name: http
    hostname: k8s.nhlabs.org
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
