base/default-backend/http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https
spec:
  parentRefs:
    - name: default-backend
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
          method: GET
      backendRefs:
        - name: nginx-service
          port: 80
